--- a/articles/virtual-machines/workloads/hpc/toc.yml
+++ b/articles/virtual-machines/workloads/hpc/toc.yml
@@ -22,6 +22,12 @@
               href: hb-series-overview.md
             - name: パフォーマンス
               href: hb-series-performance.md
+        - name: HBv2 シリーズ
+          items:
+            - name: 概要
+              href: hbv2-series-overview.md
+            - name: パフォーマンス
+              href: hbv2-performance.md
         - name: HC シリーズ
           items:
             - name: 概要
