--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -12,12 +12,12 @@ metadata:
   title: Language Understanding (LUIS) のドキュメント
   titleSuffix: Azure Cognitive Services
   description: Language Understanding (LUIS) サービスを使用すると、アプリケーションが人の発言の意図を認識できるようになります。 LUIS には機械学習が使用されており、開発者は、自然言語でユーザー入力を受け取ってその意味を正確に抽出できるアプリケーションを構築できます。
-  ms.openlocfilehash: 6e34c5e39118565e14a40765443583b0b9ed237b
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 3bae2e6e0a79dbc0106dc71a9510aa4dc318650c
+  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "89322485"
+  ms.lasthandoff: 10/22/2020
+  ms.locfileid: "92364186"
 landingContent:
 - title: Language Understanding (LUIS) について
   linkLists:
@@ -137,9 +137,7 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
+    - text: サポート オプションとヘルプ オプション
+      url: ../cognitive-services-support-options.md?context=/azure/cognitive-services/luis/context/context
     - text: トラブルシューティング
       url: troubleshooting.md
-    - text: Stack Overflow で質問する
-      url: https://stackoverflow.com/questions/tagged/LUIS
-    - text: UserVoice によるサービスへの影響
-      url: https://cognitive.uservoice.com/forums/551524-luis
