--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 09/30/2020
-  ms.openlocfilehash: fce9674e9ad21f51344b3ea249849e1474c40ee4
-  ms.sourcegitcommit: 1b47921ae4298e7992c856b82cb8263470e9e6f9
+  ms.date: 10/16/2020
+  ms.openlocfilehash: 28011d2f3bbbb838f0de9a66c98845d968620fb1
+  ms.sourcegitcommit: ce8eecb3e966c08ae368fafb69eaeb00e76da57e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/14/2020
-  ms.locfileid: "92054833"
+  ms.lasthandoff: 10/21/2020
+  ms.locfileid: "92314180"
 landingContent:
 - title: Azure Policy について
   linkLists:
@@ -63,8 +63,10 @@ landingContent:
       url: ./tutorials/create-and-manage.md
     - text: VS Code 拡張機能を使用する
       url: ./how-to/extension-for-vscode.md
-    - text: コードとしてのポリシー ワークフローの設計
+    - text: コードとしての Azure Policy ワークフローを設計する
       url: ./concepts/policy-as-code.md
+    - text: GitHub を使用してコードとしての Azure Policy を実装する
+      url: ./tutorials/policy-as-code-github.md
   - linkListType: deploy
     links:
     - text: ポリシーのサンプルのインデックス
@@ -89,9 +91,9 @@ landingContent:
     links:
     - text: 規制コンプライアンス
       url: ./concepts/regulatory-compliance.md
-    - text: Kubernetes 用のポリシー
+    - text: Kubernetes 用の Azure Policy
       url: ./concepts/policy-for-kubernetes.md
-    - text: VM のポリシー
+    - text: VM 用の Azure Policy
       url: ./concepts/guest-configuration.md
 - title: リソースの確認と修復
   linkLists:
