--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -107,28 +107,36 @@
               href: partner-center-portal/create-azure-container-offer.md
     - name: Azure 仮想マシン オファー
       items:
-        - name: 仮想マシン オファーの計画
+        - name: VM オファーを計画する
           href: marketplace-virtual-machines.md
-        - name: 仮想マシン オファーの作成と発行
+        - name: VM オファーを作成して発行する
           items:
-            - name: Azure 仮想マシン オファーを作成する
-              href: partner-center-portal/azure-vm-create-offer.md
-            - name: Azure VM 技術資産を作成する
+            - name: VM の技術資産の作成
               items:
-                - name: 仮想マシンの認定に関する問題
-                  href: partner-center-portal/vm-certification-issues-solutions.md
-                - name: Azure VM の技術資産を作成する
-                  href: partner-center-portal/create-azure-vm-technical-asset.md
-                - name: Azure VM 技術資産に関する FAQ
-                  href: partner-center-portal/common-issues-during-vhd-creation.md
-                - name: VHD からデプロイされた仮想マシンをテストする
-                  href: partner-center-portal/azure-vm-image-certification.md
-                - name: SAS URI
-                  items:
-                    - name: SAS URI の取得
-                      href: partner-center-portal/get-sas-uri.md
-                    - name: SAS URI に関する FAQ
-                      href: partner-center-portal/common-sas-uri-issues.md
+                - name: 承認済みのベースから VM を作成する
+                  href: azure-vm-create-using-approved-base.md
+                - name: 独自のイメージを使用して VM を作成する
+                  href: azure-vm-create-using-own-image.md
+                - name: VM イメージをテストする
+                  href: azure-vm-image-test.md
+                - name: SAS URI の取得
+                  href: azure-vm-get-sas-uri.md
+                - name: SAS の失敗メッセージ
+                  href: azure-vm-sas-failure-messages.md
+                - name: VM の作成に関する FAQ
+                  href: azure-vm-create-faq.md
+                - name: VM 認定のトラブルシューティング
+                  href: azure-vm-create-certification-faq.md
+            - name: VM オファーを作成する
+              href: azure-vm-create.md
+            - name: VM オファーのプロパティを構成する
+              href: azure-vm-create-properties.md
+            - name: VM オファーのリストを構成する
+              href: azure-vm-create-listing.md
+            - name: VM プランを作成する
+              href: azure-vm-create-plans.md
+            - name: プレビュー対象ユーザーの追加
+              href: azure-vm-create-preview.md
     - name: コンサルティング サービス
       items:
         - name: コンサルティング サービス オファーの計画
@@ -329,7 +337,7 @@
     - name: 技術および発行に関する営業時間
       href: 'https://aka.ms/marketplacepublishingofficehours'
     - name: パートナー センターのサポート オプション
-      href: partner-center-portal/support.md
+      href: support.md
     - name: パートナー センターのお知らせ
       href: /partner-center/announcements
     - name: Microsoft パートナー コミュニティ
