--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -28,6 +28,11 @@
     - name: 管理グループの作成 - REST
       displayName: hierarchy
       href: ./create-management-group-rest-api.md
+- name: チュートリアル
+  items:
+    - name: '次のことを学びます:サブスクリプション ガバナンス戦略を作成する'
+      displayName: 'governance, module'
+      href: /learn/modules/build-cloud-governance-strategy-azure/3-create-subscription-governance-strategy
 - name: 操作方法ガイド
   expanded: true
   items:
